<resources>
    <string name="app_name">Movies</string>

    <string name="action_settings">Settings</string>


    <string name="adult">adult</string>
    <string name="video">video</string>
    <string name="genre_ids">genre ids</string>
    <string name="original_language">original language</string>
    <string name="original_title">original title</string>
    <string name="overview">overview</string>
    <string name="release_date">release date</string>
    <string name="popularity">popularity</string>
    <string name="title">title</string>
    <string name="vote_average">vote average</string>
    <string name="vote_count">vote count</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="favourite">MARK AS\nFAVOURITE</string>
    <string name="msg.favourite.added">movie added to favourites</string>
    <string name="msg.favourite.fail">movie could not be added to favourites</string>


    <string-array name="display_by">
        <item>most popular</item>
        <item>highest rated</item>
        <item>favourites</item>
    </string-array>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="title_activity_main">Main</string>
</resources>
