<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abanoub.moviesdb.DetailsActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#34495e"
            android:paddingBottom="30dp"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:textColor="#ffffff"
            android:textSize="34sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tag_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_average" />

                    <TextView
                        android:id="@+id/vote_average"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/tag_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity" />


                    <TextView
                        android:id="@+id/popularity"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/tag_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date" />


                    <TextView
                        android:id="@+id/release_date"
                        style="@style/text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/tag_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview" />


            <TextView
                android:id="@+id/overview"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/tag_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adult" />


                <TextView
                    android:id="@+id/adult"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


            <TextView
                    style="@style/tag_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_language" />


                <TextView
                    android:id="@+id/original_language"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


            <TextView
                    style="@style/tag_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_title" />


                <TextView
                    android:id="@+id/original_title"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">



            <TextView
                    style="@style/tag_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_count" />


                <TextView
                    android:id="@+id/vote_count"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">


            <TextView
                    style="@style/tag_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video" />


                <TextView
                    android:id="@+id/video"
                    style="@style/text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>